crates/nash-parse/src/expression/snapshots/nash_parse__expression__tests__negate_number.snap
---
source: crates/nash-parse/src/expression/mod.rs
description: "Code:\n\n-42"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: Negate(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 4,
                },
            },
            value: Int(
                42,
            ),
        },
    ),
}
