crates/nash-parse/src/expression/snapshots/nash_parse__expression__tests__negate_parens.snap
---
source: crates/nash-parse/src/expression/mod.rs
description: "Code:\n\n-(a)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Negate(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 3,
                },
                end: Position {
                    line: 1,
                    column: 4,
                },
            },
            value: Var {
                kind: LowVar,
                name: "a",
            },
        },
    ),
}
