crates/nash-parse/src/expression/snapshots/nash_parse__expression__tests__negate_var.snap
---
source: crates/nash-parse/src/expression/mod.rs
description: "Code:\n\n-x"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Negate(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 3,
                },
            },
            value: Var {
                kind: LowVar,
                name: "x",
            },
        },
    ),
}
