crates/nash-parse/src/expression/snapshots/nash_parse__expression__tests__negation_in_tuple.snap
---
source: crates/nash-parse/src/expression/mod.rs
description: "Code:\n\n(-a, b)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 8,
        },
    },
    value: Tuple {
        first: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 4,
                },
            },
            value: Negate(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 3,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "a",
                    },
                },
            ),
        },
        second: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 6,
                },
                end: Position {
                    line: 1,
                    column: 7,
                },
            },
            value: Var {
                kind: LowVar,
                name: "b",
            },
        },
        rest: [],
    },
}
