crates/nash-parse/src/expression/snapshots/nash_parse__expression__tests__op_section_plus.snap
---
source: crates/nash-parse/src/expression/mod.rs
description: "Code:\n\n(+)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: Op(
        "+",
    ),
}
